--- a/views/drugs/show.hbs
+++ b/views/drugs/show.hbs
@@ -1,3 +1,5 @@
 <h1>
     THIS IS THE DRUGS SHOW PAGE >:P
 </h1>
+
+<a href="edit.hbs" class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>Click Here to Edit Drug Inventory</a>
