--- a/views/drugs/show.hbs
+++ b/views/drugs/show.hbs
@@ -1,5 +1,6 @@
 <h1>
-    THIS IS THE DRUGS SHOW PAGE >:P
+    THIS IS THE DRUG SHOW PAGE
 </h1>
+{{name}}
 
-<a href="edit.hbs" class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>Click Here to Edit Drug Inventory</a>
+{{!-- <a href="edit.hbs" class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>Click Here to Edit Drug Inventory</a> --}}
