code working again got to edit page to work

--- a/views/drugs/edit.hbs
+++ b/views/drugs/edit.hbs
@@ -16,16 +16,16 @@
       </div>
       <div>
         <label for="Strength In Mg">strengthInMg: </label>
-        <input type="number" name="strengthInMg" value="{{drug.description}}">
+        <input type="number" name="strengthInMg" value="{{drug.strengthInMg}}">
       </div>
       <div>
       <div>
         <label for="Route Taken">routeTaken: </label>
-        <input type="text" name="routeTaken" value="{{drug.price}}">
+        <input type="text" name="routeTaken" value="{{drug.routeTaken}}">
       </div>
       <div>
         <label for="Daily Frequency">dailyFrequency: </label>
-        <input type="text" name="dailyFrequency" value="{{drug.qty}}">
+        <input type="text" name="dailyFrequency" value="{{drug.dailyFrequency}}">
       </div>
       <button type="submit">Add New Drug</button>
     </form>
