--- a/views/drugs/show.hbs
+++ b/views/drugs/show.hbs
@@ -1,6 +1,10 @@
 <h1>
     THIS IS THE DRUG SHOW PAGE
 </h1>
-{{name}}
+{{drug.name}}
+{{drug.strengthInMg}}
+{{drug.routeTaken}}
+
+<a href="/drugs/{{drug._id}}/edit"><button>Edit</button></a>
 
 {{!-- <a href="edit.hbs" class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>Click Here to Edit Drug Inventory</a> --}}
