made somethign wirjk

--- a/views/drugs/edit.hbs
+++ b/views/drugs/edit.hbs
@@ -27,7 +27,7 @@
         <label for="Daily Frequency">dailyFrequency: </label>
         <input type="text" name="dailyFrequency" value="{{drug.dailyFrequency}}">
       </div>
-      <button type="submit">Add New Drug</button>
+      <button type="submit">Update Drug</button>
     </form>
 
 
