--- a/views/drugs/index.hbs
+++ b/views/drugs/index.hbs
@@ -4,3 +4,4 @@
     <a href="/drugs/{{_id}}"><button>more info</button></a>
 {{/each}}
 
+<a href="/drugs/new"><button> CREATE A NEW DRUG</button></a>
