--- a/views/drugs/new.hbs
+++ b/views/drugs/new.hbs
@@ -1,1 +1,16 @@
-<h1>This is the create page?</h1>
+<form action="/drugs" method="POST">
+        <div>
+          <label for="name">Name: </label>
+          <input type="text" name="name" placeholder="Your Name">
+        </div>
+        <div>
+          <label for="description">Email: </label>
+          <input type="email" name="email" placeholder="Your Email Address">
+        </div>
+        <a href="">
+          <button type="submit" class="btn btn-light" id="create-button">Create Your Tea Tree</button>
+        </a>
+        <button class="btn btn-light">
+          <a href="/">Return to Home Page</a>
+        </button>
+      </form>
