--- a/views/drugs/new.hbs
+++ b/views/drugs/new.hbs
@@ -1,11 +1,24 @@
 <form action="/drugs" method="POST">
         <div>
-          <label for="name">Name: </label>
-          <input type="text" name="name" placeholder="Your Name">
+          <label for="img">img: </label>
+          <input type="text" name="img" placeholder="Your image here">
         </div>
         <div>
-          <label for="description">Email: </label>
-          <input type="email" name="email" placeholder="Your Email Address">
+          <label for="drugName">Drug Name: </label>
+          <input type="text" name="drugName" placeholder="YourDrug name here">
+        </div>
+        
+        <div>
+          <label for="strengthinMgs">Strength in Mgs: </label>
+          <input type="text" name="strengthinmgs" placeholder="0 mg">
+        </div>
+         <div>
+          <label for="routeTaken">Route Taken: </label>
+          <input type="text" name="routeTaken" placeholder="Route Taken">
+        </div>
+         <div>
+          <label for="DailyFrequency">Daily Frequency: </label>
+          <input type="text" name="Daily Frequency" placeholder="X Times a Day">
         </div>
         <a href="">
           <button type="submit" class="btn btn-light" id="create-button">Create Your Tea Tree</button>
