--- a/views/drugs/index.hbs
+++ b/views/drugs/index.hbs
@@ -1,4 +1,5 @@
 <h1>DRUG INDEX</h1>
+<p><img height=50 width= 150 src="https://media.giphy.com/media/5SWGOoYJ5svfi/giphy.gif" alt=""></p>
 {{#each drugs}}
     <p>name: {{name}}</p>
     <a href="/drugs/{{_id}}"><button>more info</button></a>
