Fixed the create page

--- a/views/drugs/new.hbs
+++ b/views/drugs/new.hbs
@@ -32,6 +32,19 @@
           <label for="strengthInMg">Strength In Mgs: </label>
           <input type="text" name="strengthInMg" placeholder="Strength in Mgs">
         </div>
+        <div>
+          <label for="routeTaken">Route Taken: </label>
+          <input type="text" name="routeTaken" placeholder="Route Taken">
+        </div>
+        <div>
+          <label for="dailyFrequency">Daily Frequency: </label>
+          <input type="text" name="dailyFrequency" placeholder="Daily Frequency">
+        </div>
+
+
+
+
+        
         <a href="">
           <button type="submit" class="btn btn-light" id="create-button">Add Your New Drug</button>
         </a>
