--- a/views/drugs/show.hbs
+++ b/views/drugs/show.hbs
@@ -1,9 +1,33 @@
 <h1>
     THIS IS THE DRUG SHOW PAGE
 </h1>
-<p>{{drug.name}}</p>
-<p>{{drug.strengthInMg}}</p>
-<p>{{drug.routeTaken}}</p>
+<div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="https://media.giphy.com/media/v4YfYxz5XDEWY/giphy.gif" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                
+<p>Drug Name: {{drug.name}}</p>
+<p>Strength in Milligrams: {{drug.strengthInMg}}</p>
+<p>Route of Administration: {{drug.routeTaken}}</p>
+<p>Daily Frequency: {{drug.dailyFrequency}}</p>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
 
 <p><a href="/drugs/{{drug._id}}/edit" class="waves-effect waves-light btn-large">Edit Drug</a></p>
 
