--- a/views/drugs/show.hbs
+++ b/views/drugs/show.hbs
@@ -1,5 +1,5 @@
 <h1>
-    THIS IS THE DRUG SHOW PAGE
+    Individual Drug Information
 </h1>
 <div class="col s12 m8 offset-m2 l6 offset-l3">
         <div class="card-panel grey lighten-5 z-depth-1">
